[tool.poetry]
name = "bharatintel-api"
version = "0.1.0"
description = "BharatIntel API — India AI Agent Data Layer"
authors = ["PPventures.tech <hello@ppventures.tech>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
httpx = {extras = ["http2"], version = "^0.27.0"}
aiohttp = "^3.9.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
celery = {extras = ["redis"], version = "^5.4.0"}
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.0"
lxml = "^5.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
anthropic = "^0.30.0"
python-dateutil = "^2.9.0"
structlog = "^24.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.8.0"}
aiosqlite = "^0.22.1"
tavily-python = "^0.7.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
